--- a/index.css
+++ b/index.css
@@ -2,14 +2,17 @@
     font-family: sans-serif;
     margin: 0;
     padding: 0;
-    font-weight: 400, 700;
     box-sizing: border-box;
 }
 
 body {
     background-color: hsl(212, 45%, 89%);
     width: 100%;
-    height: 100%;
+    
+}
+
+header {
+    height: 20vh;
 }
 
 main {
@@ -21,10 +24,14 @@ main {
     'text';
     justify-items: center;
     width: 20em;
-    margin: 3em auto;
+    margin: 0 auto;
     padding: 1rem;
     border-radius: 1rem;
     text-align: center;
+}
+
+footer {
+    height: 20vh;
 }
 
 #image {
@@ -39,7 +46,8 @@ main {
     display: block;
     grid-area: header;
     margin-top: 1.25rem;
-    font-size: 1.32rem;
+    font-size: 1.25rem;
+    font-weight: 700;
 }
 
 #paragraph {
@@ -47,6 +55,7 @@ main {
     grid-area: text;
     margin: 1.25rem 0;
     font-size: 1rem;
+    font-weight: 400;
 }
 
 @media screen and (max-width: 375px) {
